--- a/_principal.scss
+++ b/_principal.scss
@@ -1,5 +1,5 @@
 body {
-    max-width: 320px;
+    max-width: 100%vw;
 }
 
 h1 {
@@ -17,18 +17,140 @@ p {
     line-height: 1.375em;
 }
 
+figcaption {
+    font-family: $fuente-pieimg;
+    font-size: 24px;
+    color: $color-texto;
+    letter-spacing: 0;
+    text-align: center;
+}
+
 main {
+
     .conocemas {
-        article {
+
+        .presentacion {
+
             .world {
 
             }
         }
+
         .masinfo {
 
         }
     }
+
     .episodios {
 
+        .tsec2 {
+
+        }
+
+        .p1 {
+
+        }
+
+        .p2 {
+
+        }
+
+        .p3 {
+
+        }
+
+        .p4 {
+
+        }
+    }
+
+    .historia {
+
+        .phone {
+
+            img {
+
+            }
+        }
+
+        .artsec3 {
+
+        }
+    }
+
+    .invitados {
+
+        .tsec4 {
+
+        }
+
+        .f1 {
+
+        }
+
+        .f2 {
+
+        }
+
+        .f3 {
+
+        }
+
+        .f4 {
+
+        }
+
+        .f5 {
+
+        }
+
+        .f6 {
+
+        }
+    }
+
+    .temas {
+
+        .tsec5 {
+
+        }
+
+        .fig1 {
+
+        }
+
+        .fig2 {
+            
+        }
+
+        .fig3 {
+            
+        }
+
+        .fig4 {
+            
+        }
+    }
+
+    .novedades {
+
+        .tsec6 {
+
+        }
+
+        .masepisodios {
+
+        }
+    }
+}
+
+footer {
+
+    .pie {
+
+    }
+
+    .redes {
+        
     }
 }
