--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header nav ul li {
   line-height: 1.75em; }
 
 body {
-  max-width: 320px; }
+  max-width: 100% vw; }
 
 h1 {
   font-family: "IBMPlexSans", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -46,6 +46,13 @@ p {
   color: #060A24 100%;
   letter-spacing: 0;
   line-height: 1.375em; }
+
+figcaption {
+  font-family: "IBMPlexSans-SemiBold", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 24px;
+  color: #060A24 100%;
+  letter-spacing: 0;
+  text-align: center; }
 
 /* Fuentes ======================================================================= */
 /* Menú y párrafos */
