--- a/_variables.scss
+++ b/_variables.scss
@@ -1,17 +1,17 @@
 /* Colores ======================================================================= */
 
 /* fondo nav y títulos en contraste */
-$color-nav-tcontraste: #FFFFFF 100%; 
+$color-contraste: #FFFFFF; 
 /* menú expandible */
-$color-mexp: #0000EC 100%; 
+$color-mexp: #0000EC; 
 /* fondo botones y hover menú */
-$color-bot-hm: #00F3BB 100%; 
+$color-bot-hm: #00F3BB; 
 /* hover botones */
 $color-hbot: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%); 
 /* fondos con skew */
 $color-skew: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
 /* texto general */
-$color-texto: #060A24 100%;
+$color-texto: #060A24;
 
 /* ======================================================================= */
 
