--- a/_responsive.scss
+++ b/_responsive.scss
@@ -1,7 +1,7 @@
 /* Móviles en horizontal o tablets en vertical
    ------------------------------------------------------------------------- */
    @media screen and (min-width: 768px) { 
-
+     
 }
  
 /* Tablets en horizonal y escritorios normales
@@ -15,3 +15,6 @@
 @media screen and (min-width: 1200px) { 
 
 }
+
+
+/*armar responsive*/
