--- a/_principal.scss
+++ b/_principal.scss
@@ -1,6 +1,6 @@
 
 
-h1 {
+h1, h2 {
     font-family: $fuente-titulos;
     font-size: 2.25em;
     letter-spacing: 0;
@@ -94,7 +94,7 @@ main {
         .artsec3 {
             padding: 0.75em;
 
-            h1 {
+            h2 {
                 line-height: 7vh;
             }
 
@@ -112,7 +112,7 @@ main {
         .tsec4 {
             padding: 0.75em;
 
-            h1 {
+            h2 {
                 padding: 0.5em 0 0 0;
                 line-height: 7vh;
             }
@@ -133,7 +133,7 @@ main {
         .tsec5 {
             padding: 0.75em;
 
-            h1 {
+            h2 {
                 padding: 1em 0 0 0;
                 line-height: 7vh;
             }
@@ -157,7 +157,7 @@ main {
         .tsec6 {
             padding: 0.75em;
 
-            h1 {
+            h2 {
                 line-height: 7vh;
                 text-align: center;
                 color: $color-contraste;
