--- a/_principal.scss
+++ b/_principal.scss
@@ -37,12 +37,12 @@ main {
         .presentacion {
 
             h1 {
+                padding-right: 1em;
                 line-height: 7vh;
-            }
-        
-                
-            span {
-                text-decoration: line-through;
+
+                .span1 {
+                    text-decoration: line-through;
+                }
             }
 
             p {
@@ -76,7 +76,7 @@ main {
             color: $color-contraste;
         }
 
-        .p1, .p2, .p3, .p4 {
+        .spotify {
             padding: 0.25em 0;
         }
     }
@@ -118,8 +118,11 @@ main {
             }
         }
 
-        .f1, .f2, .f3, .f4, .f5, .f6 {
-            /*como quitar espacios entre fotos*/
+        .fotos {
+
+            img {
+                display: block;
+            }
         }
     }
 
@@ -139,7 +142,7 @@ main {
             }
         }
 
-        .fig1, .fig2, .fig3, .fig4 {
+        .topicos {
             text-align: center;
             padding: 1.5em;
         }
@@ -192,5 +195,192 @@ footer {
     }
 }
 
-/*espaciado entre img quitar*/
-/*hovers y animations*/
+
+
+/*hovers y animaciones*/
+
+
+/* Móviles en horizontal o tablets en vertical
+   ------------------------------------------------------------------------- */
+@media screen and (min-width: 768px) { 
+    main {
+
+        .conocemas {
+            margin-top: 4em;
+            justify-content: space-evenly; 
+
+            .presentacion {
+                margin-left: 8em;
+
+                h1 {
+                    width: 70vw;
+                    font-size: 3em;
+
+                    .span2 {
+                        color: $color-mexp;
+                    }
+                }
+
+                p {
+                    width: 47vw;
+                    font-size: 0.95em;
+                    line-height: 3.5vh;
+                }
+            }
+
+            .masinfo {
+                margin-left: 8em;
+                width: 20vw;
+                font-size: 1em;
+            }
+        }
+
+        .episodios {
+            display: flex;
+            flex-direction: column;
+            clip-path: polygon(0 6%, 100% 0%, 100% 94%, 0% 100%);
+            height: 150vh;
+
+            .tsec2 {
+                margin-left: 7em;
+                margin-top: 13vh;
+                font-size: 1.20em;
+            }
+
+            .spotify {
+                display: grid;
+                grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+                justify-content: center;
+                grid-gap: 3.5em 3.5em;
+                align-self: center;
+                padding: 0;
+
+                iframe {
+                    width: 40vw;
+                }
+            }
+        }
+
+        .historia {
+            flex-direction: row;
+            justify-content: space-evenly;
+            height: 115vh;
+
+            .phone { //ver como superponer con episodios
+                top: 0;
+                width: auto;
+
+                img {
+                    width: 40vw;
+                    height: 100vh;
+                }
+            }
+
+            .artsec3 {
+                width: 43vw;
+                
+
+                h2 {
+                    line-height: 12vh;
+                    font-size: 2.25em;
+                }
+
+                p {
+                    font-size: 0.95em;
+                    padding: 0.2em 0;
+                }
+            }
+        }
+
+        .invitados {
+            display: flex;
+            flex-direction: column;
+
+            .tsec4 {
+                padding: 0.75em;
+
+                h2 {
+                    padding: 0.5em 0 0 0;
+                    line-height: 7vh;
+                }
+            }
+
+            .fotos {
+
+                img {
+                    display: block;
+                    width: 100vw;
+                    height: auto;
+                }
+            }
+        }
+
+        .temas {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            height: 170vh;
+
+            .tsec5 {
+                padding: 0.75em;
+
+                h2 {
+                    padding: 1em 0 0 0;
+                    line-height: 7vh;
+                }
+            }
+
+            .topicos {
+                text-align: center;
+                padding: 1.5em;
+            }
+        }
+
+        .novedades {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+            clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
+            background-image: $color-skew;
+            height: 62vh;
+
+            .tsec6 {
+                padding: 0.75em;
+
+                h2 {
+                    line-height: 7vh;
+                    text-align: center;
+                    color: $color-contraste;
+                }
+            }
+
+            .masepisodios {
+                height: 8vh;
+                width: 90vw;
+                background-color: $color-bot-hm;
+                font-family: IBMPlexMono-Medium;
+                font-size: 1.125em;
+                color: $color-texto;
+                letter-spacing: 0;
+                text-align: center;
+                border: none;
+            }
+        }
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 20vh;
+
+        .redes {
+            display: flex;
+            justify-content: space-around;
+            width: 80vw;
+        }
+    }
+} 
