--- a/_responsive.scss
+++ b/_responsive.scss
@@ -1,20 +1,15 @@
-/* Móviles en horizontal o tablets en vertical
-   ------------------------------------------------------------------------- */
-   @media screen and (min-width: 768px) { 
-     
-}
+
  
-/* Tablets en horizonal y escritorios normales
-   ------------------------------------------------------------------------- */
-@media screen and (min-width: 1024px) { 
+// /* Tablets en horizonal y escritorios normales
+//    ------------------------------------------------------------------------- */
+// @media screen and (min-width: 1024px) { 
 
-}
+// }
  
-/* Escritorios muy anchos
-   ------------------------------------------------------------------------- */
-@media screen and (min-width: 1200px) { 
+// /* Escritorios muy anchos
+//    ------------------------------------------------------------------------- */
+// @media screen and (min-width: 1200px) { 
 
-}
+// }
 
 
-/*armar responsive*/
