--- a/style.css
+++ b/style.css
@@ -19,23 +19,26 @@
 /* Títulos (h1) */
 /* Pié de img Temas (figcaption) */
 /* ======================================================================= */
-/* Móviles en horizontal o tablets en vertical
-   ------------------------------------------------------------------------- */
-/* Tablets en horizonal y escritorios normales
-   ------------------------------------------------------------------------- */
-/* Escritorios muy anchos
-   ------------------------------------------------------------------------- */
-/*armar responsive*/
 header {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100vw;
   padding: 0.75em; }
-  header nav .btnmenu {
+  header nav input {
+    display: none;
     font-size: 1.125em;
     margin-right: 1em; }
+  header nav .open {
+    display: block; }
+  header nav .close {
+    display: none; }
+  header nav input:checked ~ .open {
+    display: none; }
+  header nav input:checked ~ .close {
+    display: block; }
+  header nav input:checked ~ ul {
+    display: block; }
   header nav ul {
     display: none;
     position: absolute;
@@ -46,16 +49,35 @@ header {
     height: 27vh;
     background-color: #0000EC; }
     header nav ul li {
-      font-family: "IBMPlexMono", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-      font-size: 1em;
-      letter-spacing: 0;
       list-style: none;
-      line-height: 6vh;
-      color: #FFFFFF; }
-  header nav:hover ul {
-    display: block; }
+      line-height: 6vh; }
+      header nav ul li a {
+        font-family: "IBMPlexMono", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+        font-size: 1em;
+        letter-spacing: 0;
+        color: #FFFFFF;
+        text-decoration: none; }
 
-/*hovers gradient y menú open cruz*/
+/*animaciones*/
+@media screen and (min-width: 768px) {
+  header .logo {
+    margin-left: 4em; }
+  header nav .mh, header nav .x {
+    display: none; }
+  header nav ul {
+    display: inline-block;
+    position: relative;
+    top: 0;
+    width: auto;
+    height: auto;
+    padding: 0;
+    background: none; }
+    header nav ul li {
+      display: inline-block;
+      padding: 0 1em; }
+      header nav ul li a {
+        color: #060A24;
+        font-size: 0.9em; } }
 h1, h2 {
   font-family: "IBMPlexSans", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 2.25em;
@@ -85,9 +107,10 @@ main .conocemas {
   width: 100vw;
   height: 46vh; }
   main .conocemas .presentacion h1 {
+    padding-right: 1em;
     line-height: 7vh; }
-  main .conocemas .presentacion span {
-    text-decoration: line-through; }
+    main .conocemas .presentacion h1 .span1 {
+      text-decoration: line-through; }
   main .conocemas .presentacion p {
     padding: 1em 0;
     line-height: 4vh; }
@@ -110,7 +133,7 @@ main .episodios {
   main .episodios .tsec2 {
     margin-top: 3vh;
     color: #FFFFFF; }
-  main .episodios .p1, main .episodios .p2, main .episodios .p3, main .episodios .p4 {
+  main .episodios .spotify {
     padding: 0.25em 0; }
 main .historia {
   display: flex;
@@ -134,8 +157,8 @@ main .invitados {
     main .invitados .tsec4 h2 {
       padding: 0.5em 0 0 0;
       line-height: 7vh; }
-  main .invitados .f1, main .invitados .f2, main .invitados .f3, main .invitados .f4, main .invitados .f5, main .invitados .f6 {
-    /*como quitar espacios entre fotos*/ }
+  main .invitados .fotos img {
+    display: block; }
 main .temas {
   display: flex;
   flex-direction: column;
@@ -147,7 +170,7 @@ main .temas {
     main .temas .tsec5 h2 {
       padding: 1em 0 0 0;
       line-height: 7vh; }
-  main .temas .fig1, main .temas .fig2, main .temas .fig3, main .temas .fig4 {
+  main .temas .topicos {
     text-align: center;
     padding: 1.5em; }
 main .novedades {
@@ -186,8 +209,125 @@ footer {
     justify-content: space-around;
     width: 80vw; }
 
-/*espaciado entre img quitar*/
-/*hovers y animations*/
+/*hovers y animaciones*/
+/* Móviles en horizontal o tablets en vertical
+   ------------------------------------------------------------------------- */
+@media screen and (min-width: 768px) {
+  main .conocemas {
+    margin-top: 4em;
+    justify-content: space-evenly; }
+    main .conocemas .presentacion {
+      margin-left: 8em; }
+      main .conocemas .presentacion h1 {
+        width: 70vw;
+        font-size: 3em; }
+        main .conocemas .presentacion h1 .span2 {
+          color: #0000EC; }
+      main .conocemas .presentacion p {
+        width: 47vw;
+        font-size: 0.95em;
+        line-height: 3.5vh; }
+    main .conocemas .masinfo {
+      margin-left: 8em;
+      width: 20vw;
+      font-size: 1em; }
+  main .episodios {
+    display: flex;
+    flex-direction: column;
+    clip-path: polygon(0 6%, 100% 0%, 100% 94%, 0% 100%);
+    height: 150vh; }
+    main .episodios .tsec2 {
+      margin-left: 7em;
+      margin-top: 13vh;
+      font-size: 1.20em; }
+    main .episodios .spotify {
+      display: grid;
+      grid-template: repeat(2, 1fr)/repeat(2, 1fr);
+      justify-content: center;
+      grid-gap: 3.5em 3.5em;
+      align-self: center;
+      padding: 0; }
+      main .episodios .spotify iframe {
+        width: 40vw; }
+  main .historia {
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 115vh; }
+    main .historia .phone {
+      top: 0;
+      width: auto; }
+      main .historia .phone img {
+        width: 40vw;
+        height: 100vh; }
+    main .historia .artsec3 {
+      width: 43vw; }
+      main .historia .artsec3 h2 {
+        line-height: 12vh;
+        font-size: 2.25em; }
+      main .historia .artsec3 p {
+        font-size: 0.95em;
+        padding: 0.2em 0; }
+  main .invitados {
+    display: flex;
+    flex-direction: column; }
+    main .invitados .tsec4 {
+      padding: 0.75em; }
+      main .invitados .tsec4 h2 {
+        padding: 0.5em 0 0 0;
+        line-height: 7vh; }
+    main .invitados .fotos img {
+      display: block;
+      width: 100vw;
+      height: auto; }
+  main .temas {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 170vh; }
+    main .temas .tsec5 {
+      padding: 0.75em; }
+      main .temas .tsec5 h2 {
+        padding: 1em 0 0 0;
+        line-height: 7vh; }
+    main .temas .topicos {
+      text-align: center;
+      padding: 1.5em; }
+  main .novedades {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
+    background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+    height: 62vh; }
+    main .novedades .tsec6 {
+      padding: 0.75em; }
+      main .novedades .tsec6 h2 {
+        line-height: 7vh;
+        text-align: center;
+        color: #FFFFFF; }
+    main .novedades .masepisodios {
+      height: 8vh;
+      width: 90vw;
+      background-color: #00F3BB;
+      font-family: IBMPlexMono-Medium;
+      font-size: 1.125em;
+      color: #060A24;
+      letter-spacing: 0;
+      text-align: center;
+      border: none; }
+
+  footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 20vh; }
+    footer .redes {
+      display: flex;
+      justify-content: space-around;
+      width: 80vw; } }
 /* Fuentes ======================================================================= */
 /* Menú y párrafos */
 @font-face {
