--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ main .historia {
   justify-content: flex-end;
   height: 145vh; }
   main .historia .phone {
-    z-index: 99; }
+    z-index: 90; }
   main .historia .artsec3 {
     padding: 0.75em; }
     main .historia .artsec3 h2 {
@@ -162,17 +162,16 @@ main .invitados {
 main .temas {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  height: 170vh; }
+  height: 148vh; }
   main .temas .tsec5 {
-    padding: 0.75em; }
+    padding: 0 0.75em; }
     main .temas .tsec5 h2 {
-      padding: 1em 0 0 0;
       line-height: 7vh; }
-  main .temas .topicos {
+  main .temas .cont-topicos .topicos {
     text-align: center;
-    padding: 1.5em; }
+    padding: 1.5em 1em; }
 main .novedades {
   display: flex;
   flex-direction: column;
@@ -251,83 +250,69 @@ footer {
         width: 40vw; }
   main .historia {
     flex-direction: row;
-    justify-content: space-evenly;
-    height: 115vh; }
+    height: 65vh; }
     main .historia .phone {
-      top: 0;
+      position: absolute;
+      top: 195vh;
+      margin-right: 50vw;
+      align-self: flex-start;
       width: auto; }
       main .historia .phone img {
         width: 40vw;
-        height: 100vh; }
+        height: 95vh; }
     main .historia .artsec3 {
-      width: 43vw; }
+      width: 43vw;
+      height: max-content;
+      margin-right: 5vw;
+      padding: 1em 2em; }
       main .historia .artsec3 h2 {
         line-height: 12vh;
         font-size: 2.25em; }
       main .historia .artsec3 p {
-        font-size: 0.95em;
+        font-size: 0.80em;
         padding: 0.2em 0; }
-  main .invitados {
-    display: flex;
-    flex-direction: column; }
-    main .invitados .tsec4 {
-      padding: 0.75em; }
-      main .invitados .tsec4 h2 {
-        padding: 0.5em 0 0 0;
-        line-height: 7vh; }
+  main .invitados .tsec4 {
+    margin-left: 7em;
+    margin-top: 13vh;
+    font-size: 1.20em; }
+    main .invitados .tsec4 h2 {
+      padding: 0.6em 0; }
+  main .invitados .fotos {
+    display: grid;
+    grid-template: repeat(2, 1fr)/repeat(3, 1fr); }
     main .invitados .fotos img {
-      display: block;
-      width: 100vw;
-      height: auto; }
+      width: 33.33vw;
+      height: 46vh; }
   main .temas {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    height: 170vh; }
+    height: 60vh; }
     main .temas .tsec5 {
-      padding: 0.75em; }
-      main .temas .tsec5 h2 {
-        padding: 1em 0 0 0;
-        line-height: 7vh; }
-    main .temas .topicos {
-      text-align: center;
-      padding: 1.5em; }
+      align-self: flex-start;
+      padding: 0.5em 0;
+      margin-left: 7em;
+      font-size: 1.20em; }
+    main .temas .cont-topicos {
+      display: flex;
+      width: 80vw; }
+      main .temas .cont-topicos .topicos figcaption {
+        width: 19vw;
+        padding: 0.2em 0; }
   main .novedades {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-    background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-    height: 62vh; }
+    justify-content: center;
+    clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0% 100%); }
     main .novedades .tsec6 {
-      padding: 0.75em; }
-      main .novedades .tsec6 h2 {
-        line-height: 7vh;
-        text-align: center;
-        color: #FFFFFF; }
+      padding: 2em;
+      font-size: 1.20em; }
     main .novedades .masepisodios {
-      height: 8vh;
-      width: 90vw;
-      background-color: #00F3BB;
-      font-family: IBMPlexMono-Medium;
-      font-size: 1.125em;
-      color: #060A24;
-      letter-spacing: 0;
-      text-align: center;
-      border: none; }
+      width: 30vw; }
 
   footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 20vh; }
+    flex-direction: row;
+    justify-content: space-between;
+    height: 10vh;
+    padding: 0 3em; }
     footer .redes {
-      display: flex;
-      justify-content: space-around;
-      width: 80vw; } }
+      justify-content: space-evenly;
+      width: 30vw; } }
 /* Fuentes ======================================================================= */
 /* Menú y párrafos */
 @font-face {
