--- a/_principal.scss
+++ b/_principal.scss
@@ -122,6 +122,7 @@ main {
 
             img {
                 display: block;
+                width: 100vw;
             }
         }
     }
@@ -131,10 +132,11 @@ main {
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        height: 148vh;
+        height: auto;
+        padding: 2em 0;
 
         .tsec5 {
-            padding: 0 0.75em;
+            padding: 0.5em 0.75em;
 
             h2 {
                 line-height: 7vh;
@@ -146,6 +148,10 @@ main {
             .topicos {
                 text-align: center;
                 padding: 1.5em 1em;
+
+                figcaption {
+                    padding: 0.5em;
+                }
             }
         }
 
@@ -200,10 +206,6 @@ footer {
 }
 
 
-
-/*hovers y animaciones*/
-
-
 /* Móviles en horizontal o tablets en vertical
    ------------------------------------------------------------------------- */
 @media screen and (min-width: 768px) { 
@@ -212,6 +214,7 @@ footer {
         .conocemas {
             margin-top: 4em;
             justify-content: space-evenly; 
+            padding: 0.75em 0 0 0;
 
             .presentacion {
                 margin-left: 8em;
@@ -242,8 +245,9 @@ footer {
         .episodios {
             display: flex;
             flex-direction: column;
-            clip-path: polygon(0 6%, 100% 0%, 100% 94%, 0% 100%);
-            height: 150vh;
+            clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+            height: 140vh;
+            margin-top: 0;
 
             .tsec2 {
                 margin-left: 7em;
@@ -271,7 +275,7 @@ footer {
 
             .phone {
                 position: absolute;
-                top: 195vh;
+                top: 190vh;
                 margin-right: 50vw;
                 align-self: flex-start;
                 width: auto;
@@ -331,18 +335,14 @@ footer {
                 padding: 0.5em 0;
                 margin-left: 7em;
                 font-size: 1.20em;
-
-                h2 {
-                    
-                }
             }
 
             .cont-topicos {
                 display: flex;
-                width: 80vw;
+                width: 85vw;
 
                 .topicos {
-
+                    
                     figcaption {
                         width: 19vw;
                         padding: 0.2em 0;
@@ -354,12 +354,12 @@ footer {
 
         .novedades {
             justify-content: center;
-            clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0% 100%);
+            clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
 
             
             .tsec6 {
                 padding: 2em;
-                font-size: 1.20em;
+                
             }
 
             .masepisodios {
@@ -371,6 +371,7 @@ footer {
     footer {
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         height: 10vh;
         padding: 0 3em;
 
@@ -383,16 +384,199 @@ footer {
 
 
  
-// /* Tablets en horizonal y escritorios normales
-//    ------------------------------------------------------------------------- */
-// @media screen and (min-width: 1024px) { 
+/* Tablets en horizonal y escritorios normales
+    ------------------------------------------------------------------------- */
+@media screen and (min-width: 1024px) { 
+    main {
 
-// }
+        .conocemas {
+
+            .presentacion {
+
+                h1 {
+                    font-size: 4em;
+                }
+
+                p {
+                    width: 49vw;
+                    font-size: 1em;
+                }
+            }
+
+            .masinfo {
+                margin-left: 7em;
+                width: 18.9vw;
+                height: 8.35vh;
+                font-size: 1.125em;
+            }
+        }
+
+        .episodios {
+            height: 145vh;
+
+            .tsec2 {
+                font-size: 1.34em;
+            }
+
+            .spotify {
+
+                iframe {
+                    width: 45vw;
+                }
+            }
+        }
+
+        .historia {
+            height: 80vh;
+
+            .phone {
+
+                img {
+                    width: 35vw;
+                    height: 111vh;
+                }
+            }
+
+            .artsec3 {
+                width: 44vw;
+
+                h2 {
+                    font-size: 3em;
+                }
+
+                p {
+                    font-size: 1em;
+                }
+            }
+        }
+
+        .invitados {
+
+            .tsec4 {
+                font-size: 1.34em;
+            }
+        }
+
+        .temas {
+
+            .tsec5 {
+                font-size: 1.34em;
+            }
+        }
+
+        .novedades {
+            height: 70vh;
+            clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
+        }
+
+        .tsec6 {
+            padding: 1em;
+            font-size: 1.34em;
+            
+        }
+
+        .masepisodios {
+            font-size: 1.2em;
+        }
+    }
+
+    footer {
+        height: 12vh;
+        font-size: 1.15em;
+
+        .redes {
+            justify-content: space-evenly;
+            width: 25vw;
+        }
+    }
+
+}
  
-// /* Escritorios muy anchos
-//    ------------------------------------------------------------------------- */
-// @media screen and (min-width: 1200px) { 
+/* Escritorios muy anchos
+  ------------------------------------------------------------------------- */
+@media screen and (min-width: 1200px) { 
+    main {
 
-// }
+        .episodios {
+            height: 170vh;
+            align-content: center;
+            clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+
+            .tsec2 {
+                font-size: 1.34em;
+            }
+
+            .spotify {
+
+                iframe {
+                    width: 45vw;
+                }
+            }
+        }
+
+        .historia {
+            height: 80vh;
+
+            .phone {
+
+                img {
+                    width: 35vw;
+                    height: 111vh;
+                }
+            }
+
+            .artsec3 {
+                width: 44vw;
+
+                h2 {
+                    font-size: 3em;
+                }
+
+                p {
+                    font-size: 1em;
+                }
+            }
+        }
+
+        .invitados {
+
+            .tsec4 {
+                font-size: 1.34em;
+            }
+        }
+
+        .temas {
+
+            .tsec5 {
+                font-size: 1.34em;
+            }
+        }
+
+        .novedades {
+            height: 70vh;
+            clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
+        }
+
+        .tsec6 {
+            padding: 1em;
+            font-size: 1.34em;
+            
+        }
+
+        .masepisodios {
+            font-size: 1.2em;
+        }
+    }
+
+    footer {
+        height: 12vh;
+        font-size: 1.15em;
+
+        .redes {
+            justify-content: space-evenly;
+            width: 25vw;
+        }
+    }
+}
 
 
