--- a/style.css
+++ b/style.css
@@ -58,26 +58,49 @@ header {
         color: #FFFFFF;
         text-decoration: none; }
 
-/*animaciones*/
+/* Móviles en horizontal o tablets en vertical
+   ------------------------------------------------------------------------- */
 @media screen and (min-width: 768px) {
-  header .logo {
-    margin-left: 4em; }
-  header nav .mh, header nav .x {
-    display: none; }
-  header nav ul {
-    display: inline-block;
-    position: relative;
-    top: 0;
-    width: auto;
-    height: auto;
-    padding: 0;
-    background: none; }
-    header nav ul li {
+  header {
+    height: 12vh; }
+    header .logo {
+      margin-left: 5em; }
+      header .logo .imglogo {
+        width: 3vw; }
+    header nav .mh, header nav .x {
+      display: none; }
+    header nav ul {
       display: inline-block;
-      padding: 0 1em; }
-      header nav ul li a {
-        color: #060A24;
-        font-size: 0.9em; } }
+      position: relative;
+      top: 0;
+      width: auto;
+      height: auto;
+      padding: 0;
+      background: none; }
+      header nav ul li {
+        display: inline-block;
+        padding: 0 1em; }
+        header nav ul li a {
+          color: #060A24;
+          font-size: 0.9em; } }
+/* Tablets en horizonal y escritorios normales
+    ------------------------------------------------------------------------- */
+@media screen and (min-width: 1024px) {
+  header {
+    padding: 0; }
+    header .imglogo {
+      margin-left: 2em; }
+    header nav ul {
+      margin-right: 3em; }
+      header nav ul li {
+        padding: 0 1em; }
+        header nav ul li a {
+          font-size: 1em; } }
+/* Escritorios muy anchos
+   ------------------------------------------------------------------------- */
+@media screen and (min-width: 1200px) {
+  header nav ul {
+    margin-right: 5em; } }
 h1, h2 {
   font-family: "IBMPlexSans", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 2.25em;
@@ -158,20 +181,24 @@ main .invitados {
       padding: 0.5em 0 0 0;
       line-height: 7vh; }
   main .invitados .fotos img {
-    display: block; }
+    display: block;
+    width: 100vw; }
 main .temas {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 148vh; }
+  height: auto;
+  padding: 2em 0; }
   main .temas .tsec5 {
-    padding: 0 0.75em; }
+    padding: 0.5em 0.75em; }
     main .temas .tsec5 h2 {
       line-height: 7vh; }
   main .temas .cont-topicos .topicos {
     text-align: center;
     padding: 1.5em 1em; }
+    main .temas .cont-topicos .topicos figcaption {
+      padding: 0.5em; }
 main .novedades {
   display: flex;
   flex-direction: column;
@@ -208,13 +235,13 @@ footer {
     justify-content: space-around;
     width: 80vw; }
 
-/*hovers y animaciones*/
 /* Móviles en horizontal o tablets en vertical
    ------------------------------------------------------------------------- */
 @media screen and (min-width: 768px) {
   main .conocemas {
     margin-top: 4em;
-    justify-content: space-evenly; }
+    justify-content: space-evenly;
+    padding: 0.75em 0 0 0; }
     main .conocemas .presentacion {
       margin-left: 8em; }
       main .conocemas .presentacion h1 {
@@ -233,8 +260,9 @@ footer {
   main .episodios {
     display: flex;
     flex-direction: column;
-    clip-path: polygon(0 6%, 100% 0%, 100% 94%, 0% 100%);
-    height: 150vh; }
+    clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+    height: 140vh;
+    margin-top: 0; }
     main .episodios .tsec2 {
       margin-left: 7em;
       margin-top: 13vh;
@@ -253,7 +281,7 @@ footer {
     height: 65vh; }
     main .historia .phone {
       position: absolute;
-      top: 195vh;
+      top: 190vh;
       margin-right: 50vw;
       align-self: flex-start;
       width: auto; }
@@ -292,27 +320,117 @@ footer {
       font-size: 1.20em; }
     main .temas .cont-topicos {
       display: flex;
-      width: 80vw; }
+      width: 85vw; }
       main .temas .cont-topicos .topicos figcaption {
         width: 19vw;
         padding: 0.2em 0; }
   main .novedades {
     justify-content: center;
-    clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0% 100%); }
+    clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%); }
     main .novedades .tsec6 {
-      padding: 2em;
-      font-size: 1.20em; }
+      padding: 2em; }
     main .novedades .masepisodios {
       width: 30vw; }
 
   footer {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     height: 10vh;
     padding: 0 3em; }
     footer .redes {
       justify-content: space-evenly;
       width: 30vw; } }
+/* Tablets en horizonal y escritorios normales
+    ------------------------------------------------------------------------- */
+@media screen and (min-width: 1024px) {
+  main .conocemas .presentacion h1 {
+    font-size: 4em; }
+  main .conocemas .presentacion p {
+    width: 49vw;
+    font-size: 1em; }
+  main .conocemas .masinfo {
+    margin-left: 7em;
+    width: 18.9vw;
+    height: 8.35vh;
+    font-size: 1.125em; }
+  main .episodios {
+    height: 145vh; }
+    main .episodios .tsec2 {
+      font-size: 1.34em; }
+    main .episodios .spotify iframe {
+      width: 45vw; }
+  main .historia {
+    height: 80vh; }
+    main .historia .phone img {
+      width: 35vw;
+      height: 111vh; }
+    main .historia .artsec3 {
+      width: 44vw; }
+      main .historia .artsec3 h2 {
+        font-size: 3em; }
+      main .historia .artsec3 p {
+        font-size: 1em; }
+  main .invitados .tsec4 {
+    font-size: 1.34em; }
+  main .temas .tsec5 {
+    font-size: 1.34em; }
+  main .novedades {
+    height: 70vh;
+    clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%); }
+  main .tsec6 {
+    padding: 1em;
+    font-size: 1.34em; }
+  main .masepisodios {
+    font-size: 1.2em; }
+
+  footer {
+    height: 12vh;
+    font-size: 1.15em; }
+    footer .redes {
+      justify-content: space-evenly;
+      width: 25vw; } }
+/* Escritorios muy anchos
+  ------------------------------------------------------------------------- */
+@media screen and (min-width: 1200px) {
+  main .episodios {
+    height: 170vh;
+    align-content: center;
+    clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%); }
+    main .episodios .tsec2 {
+      font-size: 1.34em; }
+    main .episodios .spotify iframe {
+      width: 45vw; }
+  main .historia {
+    height: 80vh; }
+    main .historia .phone img {
+      width: 35vw;
+      height: 111vh; }
+    main .historia .artsec3 {
+      width: 44vw; }
+      main .historia .artsec3 h2 {
+        font-size: 3em; }
+      main .historia .artsec3 p {
+        font-size: 1em; }
+  main .invitados .tsec4 {
+    font-size: 1.34em; }
+  main .temas .tsec5 {
+    font-size: 1.34em; }
+  main .novedades {
+    height: 70vh;
+    clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%); }
+  main .tsec6 {
+    padding: 1em;
+    font-size: 1.34em; }
+  main .masepisodios {
+    font-size: 1.2em; }
+
+  footer {
+    height: 12vh;
+    font-size: 1.15em; }
+    footer .redes {
+      justify-content: space-evenly;
+      width: 25vw; } }
 /* Fuentes ======================================================================= */
 /* Menú y párrafos */
 @font-face {
